@@ -2,7 +2,7 @@
  *
  * Copyright (C) 2001-2004 Mariusz Woloszyn <emsi@ipartners.pl>
  * Copyright (C) 2003-2007 Marcus Meissner <marcus@jet.franken.de>
- * Copyright (C) 2006 Linus Walleij <triad@df.lth.se>
+ * Copyright (C) 2006-2007 Linus Walleij <triad@df.lth.se>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -147,11 +147,33 @@ ptp_transaction_new (PTPParams* params, PTPContainer* ptp,
 	/* is there a dataphase? */
 	switch (flags&PTP_DP_DATA_MASK) {
 	case PTP_DP_SENDDATA:
-		CHECK_PTP_RC(params->senddata_func(params, ptp,
-			sendlen, handler));
+		{
+			uint16_t ret;
+			ret = params->senddata_func(params, ptp,
+						    sendlen, handler);
+			if (ret == PTP_ERROR_CANCEL) {
+				ret = params->cancelreq_func(params, 
+							     params->transaction_id-1);
+				if (ret == PTP_RC_OK)
+					ret = PTP_ERROR_CANCEL;
+			}
+			if (ret != PTP_RC_OK)
+				return ret;
+		}
 		break;
 	case PTP_DP_GETDATA:
-		CHECK_PTP_RC(params->getdata_func(params, ptp, handler));
+		{
+			uint16_t ret;
+			ret = params->getdata_func(params, ptp, handler);
+			if (ret == PTP_ERROR_CANCEL) {
+				ret = params->cancelreq_func(params, 
+							     params->transaction_id-1);
+				if (ret == PTP_RC_OK)
+					ret = PTP_ERROR_CANCEL;
+			}
+			if (ret != PTP_RC_OK)
+				return ret;
+		}
 		break;
 	case PTP_DP_NODATA:
 		break;
