@@ -2,7 +2,7 @@
  *
  * Copyright (C) 2001-2004 Mariusz Woloszyn <emsi@ipartners.pl>
  * Copyright (C) 2003-2007 Marcus Meissner <marcus@jet.franken.de>
- * Copyright (C) 2006 Linus Walleij <triad@df.lth.se>
+ * Copyright (C) 2006-2007 Linus Walleij <triad@df.lth.se>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -380,9 +380,7 @@ retry:
 			if (usecontext && (oldsize/CONTEXT_BLOCK_SIZE < curread/CONTEXT_BLOCK_SIZE))
 				gp_context_progress_update (context, progressid, curread/CONTEXT_BLOCK_SIZE);
 			if (gp_context_cancel(context) == GP_CONTEXT_FEEDBACK_CANCEL) {
-				ret = ptp_usb_control_cancel_request(params,dtoh32(usbdata.trans_id));
-				if (ret == PTP_RC_OK)
-					ret = PTP_ERROR_CANCEL;
+				ret = PTP_ERROR_CANCEL;
 				break;
 			}
 			oldsize = curread;
